# autopilot-loop

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  autopilot.example.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  dotfiles-setup.md  fix-ci-workflow.md  getting-started.md  local-setup.md  troubleshooting.md
src/autopilot_loop/: __init__.py  __main__.py  agent.py  cli.py  cli_parser.py  codespace.py  config.py  dashboard.py  github_api.py  keepalive.py  orchestrator.py  persistence.py  prompts.py
tests/: test_agent.py  test_cli.py  test_config.py  test_dashboard.py  test_github_api.py  test_orchestrator.py  test_persistence.py
