[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "autopilot-loop"
version = "0.2.1"
description = "Headless orchestrator that automates the Copilot coding-review-fix cycle"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0",
]
authors = [
    { name = "Chanakya Valluri" },
]
keywords = ["copilot", "automation", "code-review", "github", "codespaces"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/chanakyav/autopilot-loop"
Repository = "https://github.com/chanakyav/autopilot-loop"
Issues = "https://github.com/chanakyav/autopilot-loop/issues"

[project.scripts]
autopilot = "autopilot_loop.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
